Extended scripted test to validate dev reload behavior. Re #72
I've extended the scripted test to validate that changes carried out in a source
are visible after the service is reloaded.

Issue #72 is actually fixed by the PR #77. This commit only improves testing.

--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/run-all/changes/b/BarServiceImpl.java.3
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/run-all/changes/b/BarServiceImpl.java.3
@@ -4,16 +4,16 @@ import akka.NotUsed;
 import com.lightbend.lagom.javadsl.api.ServiceCall;
 import java.util.concurrent.CompletableFuture;
 import javax.inject.Inject;
-import api.FooService;
+import api.BarService;
 
 import akka.stream.javadsl.Source;
 
-public class FooServiceImpl implements FooService {
+public class BarServiceImpl implements BarService {
 
   @Override
-  public ServiceCall<NotUsed, NotUsed, NotUsed> foo() {
+  public ServiceCall<NotUsed, NotUsed, String> bar() {
     return (id, request) -> {
-      return CompletableFuture.completedFuture(NotUsed.getInstance());
+      return CompletableFuture.completedFuture("ack updated bar 3");
     };
   }
 }
