--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/run-all/changes/c/BazServiceImpl.java.1
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/run-all/changes/c/BazServiceImpl.java.1
@@ -4,17 +4,16 @@ import akka.NotUsed;
 import com.lightbend.lagom.javadsl.api.ServiceCall;
 import java.util.concurrent.CompletableFuture;
 import javax.inject.Inject;
-import api.FooService;
+import api.BazService;
 
 import akka.stream.javadsl.Source;
 
-public class FooServiceImpl implements FooService {
+public class BazServiceImpl implements BazService {
 
   @Override
-  public ServiceCall<NotUsed, NotUsed, NotUsed> foo() {
+  public ServiceCall<NotUsed, NotUsed, String> baz() {
     return (id, request) -> {
-      System.out.println("foo called);
-      return CompletableFuture.completedFuture(NotUsed.getInstance());
+      return CompletableFuture.completedFuture("ack updated baz 1");
     };
   }
 }
